--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgresConnection": "Host=localhost;Port=5432;Username=postgres;Password=123456;Database=TaskDB"
+  },
   "AllowedHosts": "*"
 }
